Fix slider alignment

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -30,9 +30,8 @@
     stroke-width: 1px;
 }
 
-svg {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
